--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <p>mock api test</p>
+    <div class="list_call" id="l1"></div>
+    <div class="list_call" id="l2"></div>
+
+
 </body>
 </html>
