--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="list_call" id="l1"></div>
     <div class="list_call" id="l2"></div>
 
-
+    <script src="script.js"></script>
 </body>
 </html>
