--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>MockApi Test</h1>
-    
+    <h1 class="title">MockApi Test</h1>
+    <div class="list_call_box">
     <div class="list_call" id="l1"></div>
     <div class="list_call" id="l2"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
